@@ -12,3 +12,8 @@ two_lines:
   src: "<r:spreadsheet><r:sheet name='hep #{title}'><r:row><r:cell text='foo'/><r:cell eval='title'/></r:row><r:row><r:cell text='foo:#{title}'/><r:cell>blah</r:cell></r:row></r:sheet></r:spreadsheet>"
   tem: "/if _zdoc = @spreadsheet.*_zsheet = _zdoc.sheet.\"hep #\{@node.*title.*/"
   res: "foo;status title;\nfoo:status title;blah;\n"
+
+empty_cell:
+  src: "<r:spreadsheet><r:sheet name='hep #{title}'><r:row><r:cell text='foo'/><r:cell eval='title'/></r:row><r:row><r:cell text='foo:#{title}'/><r:cell/></r:row></r:sheet></r:spreadsheet>"
+  tem: "/if _zdoc = @spreadsheet.*_zsheet = _zdoc.sheet.\"hep #\{@node.*title.*/"
+  res: "foo;status title;\nfoo:status title;;\n"
