@@ -15,6 +15,7 @@ httparty:       '= 0.7.8'
 open4:
 daemons:        # upload progress
 gem_plugin:     # upload progress
+simple_xlsx_writer:    # spreadsheet
 
 querybuilder:   '= 1.1.0'
 yamltest:       '= 0.7.0'
